--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: flask
-        image: 192.168.1.63:5000/flask1:latest
+        image: devilbox/python-flask:latest 
         ports:
         - containerPort: 5000
 
