--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -1,13 +1,20 @@
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRouteTCP
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: flask
+  annotations:
+    kubernetes.io/ingress.class: traefik
 spec:
-  entryPoints:
-    - flask
-  routes:
-    - match: HostSNI("magnus.pepiniere.cloudns.ch")
-      service:
-      - name: flask
-        port: 80
+  ingressClassName: traefik
+  rules:
+    - host: magnus.pepiniere.cloudns.ch
+      http:
+        paths:
+          - path: /
+            pathType: Exact
+            backend:
+              service:
+                name: flask
+                port:
+                  number: 80
 
