--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -2,19 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: flask
-  annotations:
-    kubernetes.io/ingress.class: traefik
 spec:
   ingressClassName: traefik
   rules:
-    - host: magnus.pepiniere.cloudns.ch
-      http:
-        paths:
-          - path: /
-            pathType: Exact
-            backend:
-              service:
-                name: flask
-                port:
-                  number: 80
-
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: flask
+            port:
+              number: 80
