--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: flask
+  name: photobomb
 spec:
   ingressClassName: traefik
   rules:
@@ -11,6 +11,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: flask
+            name: photobomb
             port:
               number: 80
