--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -2,12 +2,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: flask
+  name: photobomb
 spec:
   ports:
     - port: 80
       targetPort: 80
   selector:
-    app: flask
+    app: photobomb
   type: ClusterIP
 
